// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown Component highlights selectedItems renders proper highlight 1`] = `
<li
  class="mia-platform-dropdown-menu-item mia-platform-dropdown-menu-item-selected mia-platform-dropdown-menu-item-only-child"
  data-menu-id="rc-menu-uuid-test-1"
  role="menuitem"
  tabindex="-1"
>
  <span
    class="mia-platform-dropdown-menu-title-content"
  >
    <div
      class="labelContainer horizontalContainer"
    >
      <span
        class="primaryLabel"
      >
        Label 1
      </span>
    </div>
  </span>
</li>
`;

exports[`Dropdown Component label layouts render labels 1`] = `
<li
  class="mia-platform-dropdown-menu-item mia-platform-dropdown-menu-item-only-child"
  data-menu-id="rc-menu-uuid-test-1"
  role="menuitem"
  tabindex="-1"
>
  <span
    class="mia-platform-dropdown-menu-title-content"
  >
    <div
      class="labelContainer horizontalContainer"
    >
      <span
        class="primaryLabel"
      >
        Label 1
      </span>
    </div>
  </span>
</li>
`;

exports[`Dropdown Component label layouts render labels 2`] = `
<li
  class="mia-platform-dropdown-menu-item mia-platform-dropdown-menu-item-only-child"
  data-menu-id="rc-menu-uuid-test-2"
  role="menuitem"
  tabindex="-1"
>
  <span
    class="mia-platform-dropdown-menu-title-content"
  >
    <div
      class="labelContainer horizontalContainer"
    >
      <span
        class="primaryLabel"
      >
        Label 2
      </span>
      <span
        class="secondaryLabel"
      >
        ·
      </span>
      <span
        class="secondaryLabel"
      >
        Additional Info 2
      </span>
    </div>
  </span>
</li>
`;

exports[`Dropdown Component label layouts render labels 3`] = `
<li
  class="mia-platform-dropdown-menu-item mia-platform-dropdown-menu-item-danger mia-platform-dropdown-menu-item-only-child"
  data-menu-id="rc-menu-uuid-test-3"
  role="menuitem"
  tabindex="-1"
>
  <span
    class="mia-platform-dropdown-menu-title-content"
  >
    <div
      class="labelContainer horizontalContainer"
    >
      <span
        class="primaryLabel danger"
      >
        Danger Label
      </span>
      <span
        class="secondaryLabel danger"
      >
        ·
      </span>
      <span
        class="secondaryLabel danger"
      >
        Additional Info 2
      </span>
    </div>
  </span>
</li>
`;
